<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:id="@+id/registerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_register">

    <ImageView
        android:id="@+id/logo_registerScreen"
        android:layout_width="@dimen/logo_dimension"
        android:layout_height="@dimen/logo_dimension"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_padding_horizontal"
        android:layout_marginTop="@dimen/logo_top_margin"
        android:src="@drawable/ic_g_translate_white_48dp" />

    <ImageView
        android:id="@+id/clear"
        android:layout_width="@dimen/clear_dimension"
        android:layout_height="@dimen/clear_dimension"
        android:layout_marginLeft="@dimen/clear_dimension"
        android:layout_marginTop="@dimen/activity_padding_horizontal"
        android:transitionName="fab"
        android:src="@drawable/ic_clear_white_48dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_registerScreen"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_padding_horizontal"
        android:paddingRight="@dimen/activity_padding_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:letterSpacing="0.1"
            android:fontFamily="@string/roboto_thin"
            android:textStyle="bold"/>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_Firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_padding_horizontal"
            android:backgroundTint="@android:color/white"
            android:textColorHint="@android:color/white">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:hint="@string/Firstname_hint"
                android:inputType="textPersonName"

                android:textColor="@android:color/white"
                android:textColorHighlight="@color/colorAccent" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_LastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_padding_horizontal"
            android:backgroundTint="@android:color/white"
            android:textColorHint="@android:color/white">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:hint="@string/LastName_hint"
                android:textColor="@android:color/white"
                android:inputType="textPersonName"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_padding_horizontal"
            android:textColorHint="@android:color/white">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:hint="@string/user_name_hint"
                android:textColor="@android:color/white"
                android:inputType="textEmailAddress"

                />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_padding_horizontal"
            android:textColorHint="@android:color/white">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordfieldRegistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:hint="@string/password_hint"
                android:textColor="@android:color/white"
                android:drawableRight="@drawable/ic_visibility_white_24dp"
                android:inputType="textPassword"
                android:backgroundTintMode="src_in"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_padding_horizontal"
            android:background="@drawable/bg_btn_login"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/Create_Account"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

    </LinearLayout>


</RelativeLayout>