<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_login">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/ic_g_translate_white_48dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_padding_horizontal"
        android:paddingRight="@dimen/activity_padding_horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@string/roboto_thin"
            android:letterSpacing="0.1"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_marginBottom="20dp"
            android:textColorHint="@color/text_white">

            <EditText
                android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:fontFamily="@string/roboto_light"
                android:hint="@string/user_name_hint"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_input_username"
            android:textColorHint="@color/text_white">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/loginScreen_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:fontFamily="@string/roboto_light"
                android:hint="Password"
                android:drawableRight="@drawable/ic_visibility_white_24dp"
                android:inputType="textPassword"
                android:textColor="@color/text_white"
                />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/ForgotPassword"
            android:textColor="@color/text_white" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/btn_login_margin_bottom"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_btn_login"
            android:foreground="?attr/selectableItemBackground"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/login"
            android:textColor="@color/text_white" />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:transitionName="fab"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="57dp"
        android:layout_marginRight="@dimen/activity_padding_horizontal"
        android:scaleType="fitCenter"
        app:backgroundTint="@color/newColor"
        app:srcCompat="@drawable/ic_add_white_48dp" />

    <TextView
        android:id="@+id/terms_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="34dp"
        android:layout_marginLeft="21dp"
        android:text="@string/terms_and_conditions"
        android:textColor="@color/text_white" />


</RelativeLayout>